resolve issue with calendar overlapping on top of panel

--- a/src/app/home.component.scss
+++ b/src/app/home.component.scss
@@ -21,6 +21,7 @@ header {
     border-top: none;
     position: absolute;
     left:0;
+    z-index: 999;
 }
 
 .main-section {
