--- a/src/app/shared/panel.component.scss
+++ b/src/app/shared/panel.component.scss
@@ -1,7 +1,5 @@
 .container {
-    margin-left: 1em;
-    margin-top: 1em;
-    margin-bottom: 1em;
+    margin: 1em;
 }
 
 .clientsSection {
@@ -11,5 +9,5 @@
 }
 
 .clientsFilteredSection {
-    flex: 1 1 auto;
+    flex: 1;
 }
